--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="container">
-  <app-big-button label=label></app-big-button>
+  <app-menu></app-menu>
+  <br>
+  <br>
+  <app-big-button label="App"></app-big-button>
 </div>
